chore: update .gitignore

--- a/example.env
+++ b/example.env
@@ -9,7 +9,7 @@ DB_PASS=postgres
 DB_NAME=my_database
 
 # AWS S3 configuration for static file uploads
-S3_BUCKET=my-bucket
+S3_BUCKET=sovai-aws-demo-bucket
 S3_REGION=us-east-1
 S3_ACCESS_KEY=ABCDEF
 S3_SECRET_KEY=abc123
